apps/test-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app
          image: ghcr.io/mwhite7112/homelab-test:8cdc568fe7a85625605b4cb2eaff1042cb599d41@sha256:3039eb7b6a8e5c73aabebc278f001c6e69ff694e95e3ffc1e9c9f1697faf16b6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
